# PolishSystem

./: .gitignore  CMakeLists.txt  README.md
include/: IClickable.h  ITime.h  Settings.h  century.h  decade.h  year.h
include/panel/: colorpanel.h  colorselector.h
src/: IClickable.cpp  ITime.cpp  Settings.cpp  century.cpp  decade.cpp  main.cpp  year.cpp
src/panel/: colorpanel.cpp  colorselector.cpp
tests/: century_test.cpp  decade_test.cpp  itime_test.cpp  settings_test.cpp  year_test.cpp
